<resources>
    <string name="app_name">SmartFarmer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="call">Call</string>
    <string name="language">Language</string>
    <string name="push">Push</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewall">View All</string>
    <string name="top_cfsc">TOP AGRICULTURE BUSINESS COMPANIES</string>
    <string name="partners">Our partners that we work with:</string>
    <string name="title_activity_cfscdetails">CFSCDetailsActivity</string>
    <string name="english">English</string>
    <string name="amharic">Amharic</string>
    <string name="oromifa">Oromiffa</string>
    <string name="tigrigna">Tigray</string>
    <string name="custemer_id_name">name</string>
    <string name="order_phone_no">Phone number</string>
    <string name="order_quantity">total quantity</string>
    <string name="send_order">Send order</string>
    <string name="skip">Skip</string>
    <string name="choosed">Choose</string>
    <string name="user_name_or_tin">Tin no</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="dont_have_account">I am new to smart farmer. Create account</string>
    <string name="already_have_account">I am already member login</string>
    <string name="user_name">Tin no</string>
    <string name="company_name">Your company name</string>
    <string name="license_number">License number</string>
    <string name="first_name">Fist name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="special_name">Special name e.g near sheraton addis</string>
    <string name="search_your_need">Search your need.....</string>
    <string name="next2">next</string>
    <string name="search_text">Search</string>
    <string name="tell_us_company_address"><u>Now,tell us about your company</u></string>
    <string name="create_account_info">Create your account today.save your time ,increase your income and start managing your agriculture products</string>
    <string name="title_activity_cfscprofile">CFSCProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_suppliers_profile">SuppliersProfile</string>
    <string name="final_step"><u>Final step.create your password</u></string>
    <string name="re_password">Re-write your password</string>
    <string name="password_erro">Please enter your password</string>
    <string name="password_re_error">Please re-enter your password for conformation</string>
    <string name="enter_name_error">Please enter your name</string>
    <string name="enter_lastname_error">please enter your last name</string>
    <string name="enter_companyname_error">Please enter your company name</string>
    <string name="enter_tin_error">Please enter your company tin no</string>
    <string name="select_language">Select your language</string>
    <string name="select_region">Select your region</string>
    <string name="phone_no">Phone number</string>
    <string name="enter_phone_error">Please enter your phone number</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="hello">Hello,</string>
    <string name="spacial_name_error">Please enter spacial name</string>
    <string-array name="languages">
        <item>Select your language</item>
        <item>English</item>
        <item>Amharic</item>
        <item>Oromiffa</item>
        <item>Tigrigna</item>
    </string-array>
    <string name="select_your_region">Select your region</string>
    <string name="select_your_zone">Select your zone(Sub city)</string>
    <string name="select_your_woreda">Select your woreda(kebelle)</string>
    <string name="select_region_error">Please select your region</string>
    <string name="select_zone_error">Please select your zone</string>
    <string name="select_woreda_error">Please select your woreda</string>
    <string name="thank_you_message">Thank you for choosing us</string>
    <string name="select_service_type_info">You are almost done your requirements.Now tell us what type of service will provide your company like commercial farm service center of supplying farm inputs to commercial farm centers.Please choose your service type from the following</string>
    <string name="select_service_type">Select service type</string>
    <string name="finish_text">Finish</string>
    <string name="select_product_type_text">Please select what type product your company supplies</string>
    <string name="login_tin_no_error">Please enter your tin no</string>
    <string name="login_passowrd_error">Please enter your password</string>
    <string name="something_isnot_good">Something is not good.please check your connection</string>
    <string name="on_proccess">Your account is on process. please wait until we verify your account request</string>
    <string name="title_activity_maps">Map</string>
    <string name="compilation_info">Your account is created successfully.we will announce you once we approved your requirement.</string>
    <string name="waiting">Your account is not activated yet.Please wait until we verified your account</string>
    <string name="unknow_users">Unknown user</string>
    <string name="upload_photo">Upload photo</string>
    <string name="upload_profile_image">We checked that you are not uploaded your company logo.Please upload your company logo by touching upload button.This make users can identify your company easily</string>
    <string name="push_info">Post your today\'s need and find it now.</string>
    <string name="living_woreda">Choose your woreda(current living address)</string>
    <string name="select_your_product">Select a product you want to order</string>
    <string name="select_your_product_category">Select a product type</string>
    <string name="quantity">enter quantity</string>
    <string name="select_available_date">Select delivery time</string>
    <string name="push_text">Push</string>
    <string name="push_erro_enter_quantity">please enter quantity</string>
    <string name="some_description">Add some description</string>
    <string name="add_quantity_error">Please enter the quantity</string>
    <string name="push_success">Your request is submitted successfully</string>
    <string name="push_quantity">Quantity:</string>
    <string name="push_delivery_time">Delivery time:</string>
    <string name="push_phone_no">Phone no:</string>
    <string name="forward">Forward</string>
    <string name="demand_info">Post your demand for your peer</string>
    <string name="demand_description">describe your demand</string>
    <string name="demand_quantity">enter quantity</string>
    <string name="demand_price">enter price</string>
    <string name="post_delivery_time">Select Delivery time</string>
    <string name="demand_upload">Upload</string>
    <string name="post_demand">Post</string>
    <string name="demand_attachement">Add your attachments here</string>
    <string name="title_activity_outer_cfscactivity">OuterCFSCactivity</string>
    <string name="full_name">Full name e.g Mahder Girma</string>
    <string name="registration_type">Select a type of service you are going to work with. e.g Commercial Farm centers, Commercial Farm suppliers, Agro dealer, Transportation services</string>
    <string name="registration_type_for_spinner">Select registration type</string>
    <string name="select_registration_type_error">Please select your service type</string>
    <string name="current_company_living_address">Select your company\'s location(woreda, city) </string>
    <string name="not_much_password_erro">Password is not much</string>
    <string name="registration_is_completed">Your registration is completed.</string>
    <string name="plate_number">Plate number</string>
    <string name="select_car_type">Select the type of your car</string>
    <string name="tell_us_about_your_car"><u>Now, Tell us about your Car</u></string>
    <string name="select_car_type_error">Please select your car type</string>
    <string name="add_plate_number">Please enter your car plate number</string>
    <string name="conformation_message">Thank you for choosing us. We will make you proud until then Good bye, We will announce you after checking your request</string>
    <string name="title_activity_transporter_profile">TransporterProfileActivity</string>
    <string name="title_activity_agro_dealer_profile">AgroDealerProfileActivity</string>
    <string name="post_supply">Post supply</string>
    <string name="show_post">Show supply</string>
    <string name="profile_action_btn_title">Add profile</string>
    <string name="upload_your_image">Upload company image</string>
    <string name="upload_text">Upload</string>
    <string name="upload_info_text">Upload your company image</string>
    <string name="top_service">Top services</string>
    <string name="top_markets">The Key Input Market Categories</string>
    <string name="profile_image_isnot_added">We detect that you did not uploaded your company profile image.Please add your company profile image</string>
    <string name="title_activity_market_detail">MarketDetailActivity</string>
    <string name="description">Say something about your company. This makes your company more profitable  better than any company</string>
    <string name="description_btn">add description</string>
    <string name="describe_your_company">describe your company</string>
    <string name="description_info">Say something about your company</string>
    <string name="describe_hine">describe....</string>
    <string name="update_description">update description</string>
    <string name="contact">Contact</string>
    <string name="supp_apply">apply</string>
    <string name="tell_us_how_much_you_need">Tell us how much you need.</string>
    <string name="how_much_you_need">Enter how much you need</string>
    <string name="apply_quantity">Send</string>
    <string name="apply_title">Apply now</string>
    <string name="supplay_seemore">See more</string>
    <string name="post_product_name">Posted product name</string>
    <string name="posted_product_price">Posted product price</string>
    <string name="selet_post_product_category">Select supplied product category</string>
    <string name="selet_sub_post_product_category">Select supplied product Type</string>
    <string name="caption">describe your product</string>
    <string name="post_availability">product availability</string>
    <string name="post_supply_text">Post supply</string>
    <string name="post_supply_upload">Upload product photo</string>
    <string name="pull">Pull</string>
    <string name="select_product_type_you_need_to_buy">Select what type of product you need to buy</string>
    <string name="tell_us_where_you_live">select your woreda or nearest one to your current location</string>
    <string name="set_path">Set your path</string>
    <string name="show_apth">My Path</string>
    <string name="add_vehicles">Add Vehicles</string>
    <string name="show_vehicles">My Vehicles</string>
    <string name="logout">Logout</string>
    <string name="search_woreda_hine">Search woreda....</string>
    <string name="give_them_your_price">Tell us your transportation price</string>
    <string name="pull_info_values">Pulling technology in niqugebere context is finding customers needs around their nearest area.Tell us your need and let\'s provide you ):</string>
</resources>