<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_home"
        android:icon="@mipmap/ic_home"
        android:orderInCategory="100"
        android:title="@string/title_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/notification_count"
        android:orderInCategory="150"
        android:title="@string/title_notifications"
        app:showAsAction="always" />
</menu>
