<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/decription_info"
        android:layout_alignParentTop="true"
        android:textSize="17sp"
        android:layout_margin="10dp"
        android:textColor="@color/navtextcolor"
        android:text="@string/description_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dish_description"
        android:layout_below="@id/decription_info"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="5dp"
        android:textColorHint="@color/hint_color"
        android:background="@drawable/custom_border"
        android:theme="@style/MyTextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/describe_your_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:textColor="@color/white_textcolor"
            android:textColorHint="@color/hint_color"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/describe_hine"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/description_btn"
        android:layout_below="@id/dish_description"
        android:layout_margin="20dp"
        android:text="@string/update_description"
        android:textColor="@color/navtextcolor"
        android:background="@drawable/button_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/dercibe_pr"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>